--- a/config.env
+++ b/config.env
@@ -10,8 +10,8 @@ DATABASE_URL = "mongodb+srv://switchbot:switchbot@cluster0.nyvjh.mongodb.net/?re
 USER_TOKEN = ""                             # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
-AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
-SUDO_USERS = "89acc04a-4b6f-4694-ab05-552c3e228b7a"                             # Require restart after changing it while bot running
+AUTHORIZED_CHATS = "89acc04a-4b6f-4694-ab05-552c3e228b7a"                       # Require restart after changing it while bot running
+SUDO_USERS = ""                             # Require restart after changing it while bot running
 STATUS_LIMIT = "4"
 DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "15"
