--- a/config.env
+++ b/config.env
@@ -55,8 +55,8 @@ QUEUE_ALL = ""
 QUEUE_DOWNLOAD = ""
 QUEUE_UPLOAD = ""
 # RSS
-RSS_DELAY = "900"
-RSS_CHAT = ""
+RSS_DELAY = "2"
+RSS_CHAT = "99b01a1f-b370-4db6-be20-0c2ff3968888"
 # Torrent Search
 SEARCH_API_LINK = ""
 SEARCH_LIMIT = "0"
